Edited and added button and link class names
For basic styles from buttons and links to applied style and color variants.

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,5 +1,22 @@
 /*****
  ***
+ ***   Theme: Button
+ ***
+*****/
+
+.button {
+    display: inline-block;
+    margin-block: var(--fixed-space-sm);
+}
+
+[class*="button-filled"],
+[class*="button-outline"] {
+    padding: var(--layout-space-xs) var(--layout-space-sm);
+    border-style: solid;
+}
+
+/*****
+ ***
  ***   Base: Blockquote
  ***
 *****/
