--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -55,10 +55,12 @@ header nav {
 header nav a:link,
 header nav a:visited {
     color: var(--color-neutral-60);
+    text-decoration: none;
 }
 
 header nav a:hover {
-    color: var(--color-neutral-50);
+    color: var(--color-scheme-text-base);
+    text-decoration: underline;
 }
 
 /*****
@@ -74,10 +76,12 @@ header nav a:hover {
 footer a:link,
 footer a:visited {
     color: var(--color-neutral-60);
+    text-decoration: none;
 }
 
 footer a:hover {
-    color: var(--color-neutral-50);
+    color: var(--color-scheme-text-base);
+    text-decoration: underline;
 }
 
 /*****
