--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -366,7 +366,7 @@ figure a:focus {
 
 /*****
  ***
- ***   Work In Progress
+ ***   Theme: Examples
  ***
 *****/
 
@@ -394,6 +394,52 @@ figure a:focus {
     align-items: center;
     justify-content: center;
     font-size: var(--font-size-xs, 1.3rem);
+}
+
+/*****
+ ***
+ ***   Work In Progress
+ ***
+*****/
+
+form {
+    padding: var(--layout-space-md);
+    display: flex;
+    gap: var(--content-space-sm);
+    flex-direction: column;
+    background-color: var(--color-neutral-10);
+}
+
+label {
+    display: inline-block;
+}
+
+input, select {
+    padding: var(--fixed-space-md) var(--fixed-space-lg);
+    width: 100%;
+    border: 2px solid var(--color-neutral-30);
+    border-radius: 1.6rem;
+}
+
+input[type="checkbox"],
+input[type="radio"] {
+    height: 2.4rem;
+    width: 2.4rem;
+}
+
+.form-fields {
+    display: flex;
+    gap: var(--fixed-space-lg);
+    flex-wrap: wrap;
+}
+
+.form-field {
+    display: inline-block;
+}
+
+.form-field:has(input[type="checkbox"] + label) {
+    padding: var(--fixed-space-md);
+    background-color: var(--color-neutral-20);
 }
 
 @media (prefers-color-scheme: dark) {
